--- a/platformio.ini
+++ b/platformio.ini
@@ -11,6 +11,6 @@
 [env:nucleo_f446ze]
 platform = ststm32
 board = nucleo_f446ze
-framework = cmsis
+framework = stm32cube
 upload_protocol = stlink
 debug_tool = stlink
