--- a/platformio.ini
+++ b/platformio.ini
@@ -1,16 +1,17 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
-[env:nucleo_f446ze]
-platform = ststm32
-board = nucleo_f446ze
+[env:stm32f446ve]
+platform = https://github.com/platformio/platform-ststm32.git
+board = nucleo_f446re
 framework = stm32cube
+; Change the upload protocol to swd if using ST-Link or similar for SWD upload
 upload_protocol = stlink
+; Specify the debug tool; default is also stlink for STM32 boards
 debug_tool = stlink
+
+; Optionally, specify custom upload and debug flags if necessary
+; upload_flags =
+; debug_flags =
+
+; Other configurations like build flags, source filters, extra scripts, etc., can be added as needed
+; src_filter = +<*> -<.git/> -<example/>
+; build_flags =
+; extra_scripts =
